# Socials-Automator

./: .env.example  .gitignore  PRIVACY_POLICY.md  README.md  pyproject.toml  test_ai_features.py  tiktok_video_ids.txt
.claude/: CLAUDE.md  settings.local.json
config/: ai_tools.yaml  model_adapters.yaml  news_sources.yaml  providers.yaml
docs/: INSTAGRAM_API_CHEATSHEET.md  INSTAGRAM_SETUP.md  VIDEO_GENERATION_SPEC.md  niches.json  niches.md
docs/design/: dense_overlay_plan.md
docs/empty_captions/: ai.for.mortals.md  fixed_captions.json  news.but.quick.md
docs/plans/: image-overlay-feature.md
profiles/ai.for.mortals/: metadata.json  reel_topic_history.json  research_query_history.json
profiles/news.but.quick/: metadata.json  story_history.json  theme_history.json  topic_history.json
rvc_sandbox/: rvc_adam_tts.py
rvc_sandbox/python/: python312._pth
scripts/: README_fix_captions.md  fix_captions.py  fix_empty_captions.py  generate_empty_captions_report.py  sync_tiktok_auto.py  sync_tiktok_ids.py  sync_tiktok_status.py
src/socials_automator/: __init__.py  cli.py  cli_display.py
tests/: __init__.py  conftest.py
tests/ai_sessions/: __init__.py  test_script_session.py  test_session_storage.py
tests/ai_test/: __init__.py  conftest.py  test_caption_generation.py  test_cta_generation.py
tests/hashtag/: __init__.py  test_sanitizer.py
tests/instagram/: test_caption_sanitization.py
tests/integration/: __init__.py  test_generation_flow.py
tests/knowledge/: conftest.py  test_ai_tools_integration.py  test_ai_tools_models.py  test_ai_tools_registry.py  test_ai_tools_store.py
tests/news/: __init__.py  test_aggregator_timeouts.py  test_story_count.py
tests/providers/: test_lmstudio_model.py  test_text_provider_agno.py  test_text_provider_errors.py
tests/research/: test_web_search_timeouts.py
tests/services/: test_extractor.py
tests/unit/: __init__.py  test_orchestrator.py  (+2 more)
(+370 files in other folders)
