[project]
name = "socials-automator"
version = "0.1.0"
description = "AI-powered Instagram carousel content generator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AI For Mortals" }]
keywords = ["instagram", "ai", "content-generation", "automation", "social-media"]

dependencies = [
    # Core CLI & UI
    "typer>=0.9.0",
    "rich>=13.7.0",

    # Configuration & Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",

    # Async & HTTP
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",

    # LLM Providers - Agno framework (unified interface)
    "agno>=1.0.0",
    "openai>=1.12.0",
    "google-genai>=1.0.0",

    # Image Generation APIs
    "replicate>=0.25.0",
    "fal-client>=0.3.0",

    # Image Processing & Composition
    "pillow>=10.2.0",

    # Web Research & Scraping (removed trafilatura due to grpcio dep)
    "feedparser>=6.0.10",
    "ddgs>=7.0.0",  # DuckDuckGo search

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",

    # Instagram Posting
    "cloudinary>=1.36.0",
]

[project.optional-dependencies]
# ChromaDB and Reddit require numpy which needs a C compiler on Python 3.14
full = [
    "chromadb>=0.4.22",
    "asyncpraw>=7.8.0",
    "pendulum>=3.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
socials = "socials_automator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/socials_automator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
